Templates are now GET via publicID. TemplateUsage also uses that.
